# zero2prod

./: .env  .rustfmt.toml  Cargo.toml  README.md  config.yaml  configuration.yaml  data.db  test.http
migrations/: 20240227143653_create_subscriptions_table.down.sql  20240227143653_create_subscriptions_table.up.sql  20240615102246_create_users.down.sql  20240615102246_create_users.up.sql  20240619091425_create_counters.down.sql  20240619091425_create_counters.up.sql
scripts/: init_db.sh
src/: api.rs  config.rs  configuration.rs  db.rs  lib.rs  main.rs  startup.rs
src/api/: counter.rs  counter_record.rs  jwt.rs  user.rs
src/routes/: auth.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
