[package]
name = "zero2prod"
version = "0.1.0"
authors = ["zhengpanone <zhengpanone@hotmail.com>"]
edition = "2021"


[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["default"] }
dotenvy = "0.15.7"
http = "1.0.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "tls-rustls", "time"] }
time = { version = "0.3.34", features = ["serde-human-readable"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }

