[package]
name = "zero2prod"
version = "0.1.0"
authors = ["zhengpanone <zhengpanone@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
config = { version = "0.14.0",default-features = false, features = ["yaml"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", default-features = false,  features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.36.0", features = ["macros","rt-multi-thread"]}
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }

# dependenciens specific to auth
actix-web-httpauth = "0.8.2"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
argonautica = "0.2.0"


[dev-dependencies]
reqwest = "0.12.4"
